Added html pages for different scenes
now has about/home/settings

--- a/MobileApps/cobalt/www/settings.html
+++ b/MobileApps/cobalt/www/settings.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="css/slidebars.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/mainmenu.css" />
+        <link rel="stylesheet" type="text/css" href="css/settings.css" />
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-7s5uDGW3AHqw6xtJmNNtr+OBRJUlgkNJEo78P4b0yRw= sha512-nNo+yCHEyn0smMxSswnf/OnX6/KwJuZTlNZBjauKhTK0c+zT+q5JOCx0UFhXQ6rJR9jg6Es8gPuD2uZcYDLqSw==" crossorigin="anonymous">
 
         <title>Cobalt</title>
@@ -15,7 +15,7 @@
     <body id="body">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container" id="nav">
-                Chore Organizer
+                Settings
             </div>
         </nav>
 
