--- a/MobileApps/cobalt/www/index.html
+++ b/MobileApps/cobalt/www/index.html
@@ -31,6 +31,7 @@
                     //console.log(data[0].apikey);
                     window.localStorage.setItem('apikey', data[0].apikey);
                     window.localStorage.setItem('email', data[0].email);
+                    window.location.href="mainmenu.html"
                 }else{
                     console.log("It didn't work");
                 }
