Fixed sidebar menu

--- a/MobileApps/cobalt/www/settings.html
+++ b/MobileApps/cobalt/www/settings.html
@@ -30,7 +30,7 @@
             });
         </script>
 
-        <div id="sidebar" class="sidebar">
+        <div id="sidebar" class="sidebar" style="left:-200px;">
                 <ul class="menulist">
                     <li class="menuhead">Menu</li>
                     <li class="menu">
