--- a/MobileApps/cobalt/www/about.html
+++ b/MobileApps/cobalt/www/about.html
@@ -31,7 +31,7 @@
             });
         </script>
 
-        <div id="sidebar" class="sidebar">
+        <div id="sidebar" class="sidebar" style="left:-200px;">
                 <ul class="menulist">
                     <li class="menuhead">Menu</li>
                     <li class="menu">
