Added content to about page (mobile)

--- a/MobileApps/cobalt/www/about.html
+++ b/MobileApps/cobalt/www/about.html
@@ -19,6 +19,15 @@
                 About
             </div>
         </nav>
+        <ul style="list-style-type:square">
+            <li>Cobalt is a chore organizing service that is directed towards apartments and roommates.</li>
+            <li>Users add custom chores with preset intervals: daily, every other day, bi-weekly, weekly and monthly.</li>
+            <li>Notifications are pushed to roommates through the mobile app, alerting them when they are assigned a chore</li>
+            <li>Roomates have the ability to see whose turn it is to do a chore (users are recommended to make sure assigned chores get done on time for maximum effectiveness.</li>
+            <li>When a user completes a chore, they simply click the chore complete button either on the mobile app or online.</li>
+            <li>Chores are assigned every night (4am) and notifications are sent in the morning (8am).</li>
+            <li>Cobalt strives to make chores evenly spaced out in time and between roommate, implementation of this app ensures that no user feels they are doing more work than the rest!</li>
+        </ul>
 
         <script src="http://hammerjs.github.io/dist/hammer.min.js"></script>
 
