css on about ul

--- a/MobileApps/cobalt/www/about.html
+++ b/MobileApps/cobalt/www/about.html
@@ -19,7 +19,7 @@
                 About
             </div>
         </nav>
-        <ul style="list-style-type:square">
+        <ul id="info">
             <li>Cobalt is a chore organizing service that is directed towards apartments and roommates.</li>
             <li>Users add custom chores with preset intervals: daily, every other day, bi-weekly, weekly and monthly.</li>
             <li>Notifications are pushed to roommates through the mobile app, alerting them when they are assigned a chore</li>
