--- a/MobileApps/cobalt/www/mainmenu.html
+++ b/MobileApps/cobalt/www/mainmenu.html
@@ -79,9 +79,9 @@
                     <li class="menu">
                         <a href="about.html">About</a>
                     </li>
-                    <li class="menu">
+                    <!--<li class="menu">
                         <a href="settings.html">Settings</a>
-                    </li>
+                    </li>-->
                     <li><img src="img/logo.png" style="width:200px;height:200px;margin-top:30px;"></li>
 
                 </ul>
